--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<ol>
 			{% for item in channel %}
-			<li><a href="{{ item[1].text }}">{{ item[0].text }}</a></li>
+			<li><h3><a href="{{ item[1].text }}">{{ item[0].text }}</a></h3></li>
 			{% endfor %}
 		</ol>
 	</body>
